--- a/static/index.html
+++ b/static/index.html
@@ -5,22 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Village Square</title>
   <link rel="icon" href="data:,">
+  <link rel="stylesheet" href="/shared.css">
 
   <style>
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        Helvetica, Arial, sans-serif;
-      background: #f5f5f0;
-      color: #333;
-      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -50,30 +38,7 @@
       margin-bottom: 2rem;
     }
 
-    /* ---- Banner ---- */
-    #banner {
-      display: none;
-      padding: 0.75rem 1rem;
-      border-radius: 6px;
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-      animation: fadeIn 0.3s ease;
-    }
 
-    #banner.success {
-      background: #d4edda;
-      color: #155724;
-    }
-
-    #banner.error {
-      background: #f8d7da;
-      color: #721c24;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-8px); }
-      to   { opacity: 1; transform: translateY(0); }
-    }
 
     /* ---- Form ---- */
     .form-group {
@@ -81,7 +46,7 @@
       text-align: left;
     }
 
-    label {
+    .form-group label {
       display: block;
       font-size: 0.85rem;
       font-weight: 600;
@@ -96,6 +61,7 @@
       border: 1px solid #ccc;
       border-radius: 6px;
       transition: border-color 0.2s;
+      min-height: 44px;
     }
 
     input:focus {
@@ -109,6 +75,20 @@
       color: #d32f2f;
       margin-top: 0.25rem;
       min-height: 1.1em;
+      display: block;
+      overflow: hidden;
+      max-height: 0;
+      opacity: 0;
+      transition: max-height 0.25s ease, opacity 0.25s ease;
+    }
+
+    .field-error.visible {
+      max-height: 3em;
+      opacity: 1;
+    }
+
+    input.input-error {
+      border-color: #d32f2f !important;
     }
 
     button {
@@ -123,6 +103,7 @@
       cursor: pointer;
       margin-top: 0.5rem;
       transition: background 0.2s;
+      min-height: 44px;
     }
 
     button:hover {
@@ -145,8 +126,9 @@
       background: none;
       border: none;
       width: auto;
-      padding: 0;
+      padding: 0.5rem 0.75rem;
       font-weight: 400;
+      min-height: 44px;
     }
 
     .toggle-link:hover {
@@ -156,6 +138,20 @@
 
     /* Hide elements */
     .hidden { display: none !important; }
+
+    /* ---- Very small screens ---- */
+    @media (max-width: 360px) {
+      .container {
+        max-width: 100%;
+        border-radius: 0;
+        box-shadow: none;
+        margin: 0;
+      }
+      body {
+        padding: 0;
+        align-items: flex-start;
+      }
+    }
   </style>
 </head>
 
@@ -166,8 +162,8 @@
       <p class="subtitle">Connecting villagers with trusted local suppliers.</p>
     </header>
 
-    <!-- Banner for success / error messages -->
-    <div id="banner" aria-live="polite"></div>
+    <!-- Toast container -->
+    <div id="toastContainer" aria-live="polite"></div>
 
     <form id="authForm" novalidate>
       <!-- Name field (hidden in login mode) -->
@@ -198,6 +194,7 @@
     <button class="toggle-link" id="toggleMode">Already have an account? Log in</button>
   </div>
 
+  <script src="/shared.js"></script>
   <script>
     (function () {
       // ---- Elements ----
@@ -211,10 +208,8 @@
       var passError   = document.getElementById('passwordError');
       var submitBtn   = document.getElementById('submitBtn');
       var toggleBtn   = document.getElementById('toggleMode');
-      var banner      = document.getElementById('banner');
 
       var isRegister  = true;   // true = register mode, false = login mode
-      var bannerTimer = null;
 
       var emailRegex  = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
 
@@ -222,20 +217,10 @@
       fetch('/api/me', { credentials: 'same-origin' })
         .then(function (r) { if (r.ok) window.location.href = '/dashboard.html'; });
 
-      // ---- Banner helper ----
-      function showBanner(message, type) {
-        if (bannerTimer) clearTimeout(bannerTimer);
-        banner.textContent = message;
-        banner.className = type;        // 'success' or 'error'
-        banner.style.display = 'block';
-        banner.style.animation = 'none';
-        // Force reflow to restart animation
-        void banner.offsetWidth;
-        banner.style.animation = '';
-        bannerTimer = setTimeout(function () {
-          banner.style.display = 'none';
-        }, 4000);
-      }
+      // ---- Wire up input listeners to clear errors on type ----
+      VS.clearErrorOnInput(nameInput, nameError);
+      VS.clearErrorOnInput(emailInput, emailError);
+      VS.clearErrorOnInput(passInput, passError);
 
       // ---- Toggle register / login ----
       toggleBtn.addEventListener('click', function () {
@@ -250,51 +235,60 @@
           toggleBtn.textContent = 'Need an account? Register';
         }
         // Clear errors
-        nameError.textContent = '';
-        emailError.textContent = '';
-        passError.textContent = '';
-        banner.style.display = 'none';
+        clearErrors();
       });
+
+      function clearErrors() {
+        [nameError, emailError, passError].forEach(function(el) {
+          el.textContent = ''; el.classList.remove('visible');
+        });
+        [nameInput, emailInput, passInput].forEach(function(el) {
+          el.classList.remove('input-error');
+        });
+      }
+
+      function showError(el, input, msg) {
+        el.textContent = msg;
+        el.classList.add('visible');
+        if (input) input.classList.add('input-error');
+      }
 
       // ---- Form submit ----
       form.addEventListener('submit', function (e) {
         e.preventDefault();
-        nameError.textContent = '';
-        emailError.textContent = '';
-        passError.textContent = '';
+        clearErrors();
 
         var name     = nameInput.value.trim();
         var email    = emailInput.value.trim();
         var password = passInput.value;
         var valid    = true;
 
-        // Validate name (register only)
+        // Validate all fields at once
         if (isRegister && !name) {
-          nameError.textContent = 'Please enter your name.';
+          showError(nameError, nameInput, 'Please enter your name.');
           valid = false;
         }
 
-        // Validate email
         if (!email) {
-          emailError.textContent = 'Please enter your email.';
+          showError(emailError, emailInput, 'Please enter your email.');
           valid = false;
         } else if (!emailRegex.test(email)) {
-          emailError.textContent = 'Please enter a valid email address.';
+          showError(emailError, emailInput, 'Please enter a valid email address.');
           valid = false;
         }
 
-        // Validate password
         if (!password) {
-          passError.textContent = 'Please enter a password.';
+          showError(passError, passInput, 'Please enter a password.');
           valid = false;
         } else if (password.length < 6) {
-          passError.textContent = 'Password must be at least 6 characters.';
+          showError(passError, passInput, 'Password must be at least 6 characters.');
           valid = false;
         }
 
         if (!valid) return;
 
         submitBtn.disabled = true;
+        submitBtn.textContent = isRegister ? 'Registering…' : 'Logging in…';
 
         if (isRegister) {
           doRegister(name, email, password);
@@ -314,16 +308,18 @@
         .then(function (r) { return r.json().then(function (d) { return { ok: r.ok, status: r.status, data: d }; }); })
         .then(function (res) {
           if (!res.ok) {
-            showBanner(res.data.error || 'Registration failed.', 'error');
+            VS.toast(res.data.error || 'Registration failed.', 'error');
             submitBtn.disabled = false;
+            submitBtn.textContent = 'Register';
             return;
           }
           // Auto-login after successful registration
           doLogin(email, password);
         })
         .catch(function () {
-          showBanner('Network error. Please try again.', 'error');
+          VS.toast('Network error. Please try again.', 'error');
           submitBtn.disabled = false;
+          submitBtn.textContent = 'Register';
         });
       }
 
@@ -338,15 +334,17 @@
         .then(function (r) { return r.json().then(function (d) { return { ok: r.ok, status: r.status, data: d }; }); })
         .then(function (res) {
           if (!res.ok) {
-            showBanner(res.data.error || 'Login failed.', 'error');
+            VS.toast(res.data.error || 'Login failed.', 'error');
             submitBtn.disabled = false;
+            submitBtn.textContent = isRegister ? 'Register' : 'Log in';
             return;
           }
           window.location.href = '/dashboard.html';
         })
         .catch(function () {
-          showBanner('Network error. Please try again.', 'error');
+          VS.toast('Network error. Please try again.', 'error');
           submitBtn.disabled = false;
+          submitBtn.textContent = isRegister ? 'Register' : 'Log in';
         });
       }
     })();
